[package]
name = "array_stump_benchmarks"
version = "0.1.0"
authors = ["Fabian Keller <github.100.fkeller@spamgourmet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

array_stump = { path = "../lib", features = [] }

rand = "0.7.3"
pretty_assertions = "0.6"
serde_json = { version = "1.0.44", features = ["arbitrary_precision"] }
