[package]
name = "array_stump"
version = "0.1.0"
authors = ["Fabian Keller <github.100.fkeller@spamgourmet.com>"]
edition = "2018"

license = "MIT"
description = "A data structure mixing dynamic array and sorted set semantics."

[dev-dependencies]

rand = "0.7.3"
pretty_assertions = "0.6"

[features]

indextrait = []
